[package]

name = "leek2"
version = "0.0.1"
authors = [ "Me <me@me.me>" ]

#We're still defining basic functionality;
#uncomment this once we're past making a
#logger.
[dependencies]
#The graphics wrapper.
#Probably going to use gfx-rs since it provides a higher-level abstraction.
gfx = "*"
#SIMD operations.
simd = { git = "https://github.com/huonw/simd" }

[[bin]]

name = "leek2"