♦[package]
name = "leek2"
version = "0.0.1"
authors = [ "Me <me@me.me>" ]

#We're still defining basic functionality;
#uncomment this once we're past making a
#logger.
[dependencies]
#The graphics wrapper.
#Probably going to use gfx-rs since it provides a higher-level abstraction.
gfx = "0.16"
gfx_core = "*"
gfx_device_gl = "*"
glutin = "0.8"
gfx_window_glutin = "0.16"

#SIMD operations.
#Not available on release, need to use nightly compiler for this.
#simd = { git = "https://github.com/huonw/simd" }
log = "*"

#Chrono for timekeeping.
chrono = "*"

#Platform-specific APIs.
winapi = "*"
kernel32-sys = "*"

[[bin]]
name = "leek2"