[package]
name = "leek2"
version = "0.0.1"
authors = [ "Me <me@me.me>" ]

[dependencies]
#The graphics wrapper.
#Probably going to use gfx-rs since it provides a higher-level abstraction.
#gfx = "0.16"
gfx = "*"
gfx_core = "*"
gfx_device_gl = "*"
#glutin = "0.8"
glutin = "^0.9.0"
#gfx_window_glutin = "0.16"
gfx_window_glutin = "^0.17.0"
failure = "*"
#SIMD operations.
#Not available on release, need to use nightly compiler for this.
#simd = { git = "https://github.com/huonw/simd" }
log = "*"

#Chrono for timekeeping.
chrono = "*"
num-traits = "*"

#Platform-specific APIs.
winapi = "*"
kernel32-sys = "*"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "^0.4.2"

[[bin]]
name = "leek2"
doc = false