[package]
name = "leek2"
version = "0.0.1"
authors = [ "jTitor <me@me.me>" ]

[dependencies]
bitflags = "*"
#Simpler and easier-to-convert errors
failure = "*"#"0.1.1"
#Image loading library
image = "*"#"0.15"

#The graphics wrapper.
#HAL isn't finalized for release, so
#the subcrates aren't published on Cargo.io;
#for the moment you refer to them via the git repo,
#and Cargo will pull the subcrates as needed.
#
#Note - if you're getting failure trying
#to build these subcrates, delete Cargo.lock and your
#target folder, `cargo clean` won't do the job
#
#2/12: Pointing at custom fork so RI is available
gfx-hal = { version = "0.1.0", features = ["mint", "serde"], git = "https://github.com/jTitor/gfx/" }
gfx-backend-gl = { git = "https://github.com/jTitor/gfx/", version = "*" }
glutin = "^0.9.0"
winit = "*" #Will need to make this the custom fork later

#SIMD operations.
#Not available on release, need to use nightly compiler for this.
#simd = { git = "https://github.com/huonw/simd" }

log = "*"
rand = "*"

#Chrono for timekeeping.
chrono = "*"
num-traits = "*"
#Remotery provides profiling data.
remotery = "*"

#Platform-specific APIs.
winapi = { version = "*", features = ["winnt"] }
kernel32-sys = "*"

# [[bin]]
# name = "leek2"
# doc = false